# cfs_templates

./: README.md
templates_ws/src/cfs_msgs/: CMakeLists.txt  package.xml
templates_ws/src/cfs_msgs/srv/: CombineStrings.srv
templates_ws/src/node_templates/: CMakeLists.txt  package.xml
templates_ws/src/node_templates/config/: params.yaml
templates_ws/src/node_templates/include/node_templates/: simple_publisher.hpp  subpub_example.hpp  timesync_subscription.hpp
templates_ws/src/node_templates/launch/: example_launch.py  launch.py
templates_ws/src/node_templates/src/: main.cpp  node_example.cpp  service_client_example.cpp  service_server_example.cpp  simple_publisher.cpp  simple_publisher_node.cpp  subpub_example.cpp  timesync_subscription.cpp  timesync_subscription_node.cpp
